--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ apply plugin: 'org.jetbrains.dokka'
 apply plugin: 'org.junit.platform.gradle.plugin'
 
 group = 'me.kgustave'
-version = '0.1.0'
+version = '0.2.0'
 
 sourceCompatibility = 1.8
 
@@ -198,6 +198,7 @@ publishing {
             artifactId = project.name
             version = project.version
 
+            from project.components.java
             artifact project.tasks.dokkaJar
             artifact project.tasks.sourcesJar
 
@@ -215,15 +216,6 @@ publishing {
                 def kotlinxRepoNode = repositoriesNode.appendNode('repository')
                 kotlinxRepoNode.appendNode('id', 'kotlinx')
                 kotlinxRepoNode.appendNode('url', 'http://dl.bintray.com/kotlin/kotlinx')
-
-                def dependenciesNode = asNode().appendNode('dependencies')
-                project.configurations.compile.dependencies.each {
-                    def dependencyNode = dependenciesNode.appendNode('dependency')
-                    dependencyNode.appendNode('groupId', it.group)
-                    dependencyNode.appendNode('artifactId', it.name)
-                    dependencyNode.appendNode('version', it.version)
-                    dependencyNode.appendNode('scope', 'compile')
-                }
             }
         }
     }
